# seminar-work-web-app

./: Cargo.toml  README.md
migrations/2023-01-19-083203_users/: up.sql
migrations/2023-01-21-163050_sessions/: up.sql
migrations/2023-01-23-154217_posts/: up.sql
src/: application.rs  database.rs  index.rs  login.rs  logout.rs  main.rs  models.rs  new_post.rs  post.rs  register.rs  schema.rs
static/: style.css
templates/: base.html.hbs  index.html.hbs  login.html.hbs  new_post.html.hbs  post.html.hbs  register.html.hbs  server_error.html.hbs
