[package]
name = "seminarski-php"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13.0"
diesel = { version = "2.0.2", features = ["mysql"] }
dotenvy = "0.15.6"
hex = "0.4.3"
rand = "0.8.5"
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
